- adding version - preparing for publishing - creating readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,17 @@
 [package]
 name = "ruetta"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2024"
+description = "Template-based file generator"
+license = "MIT"
+repository = "https://github.com/vikkio88/ruetta"
+readme = "README.md"
+keywords = ["cli", "templates", "scaffolding", "hygen"]
+categories = ["command-line-utilities"]
+
+[[bin]]
+name = "ruetta"
+path = "src/main.rs"
 
 [dependencies]
 dojang = "0.1.6"
